--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://anikas8.github.io/My-Portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
